--- a/theme.css
+++ b/theme.css
@@ -1071,6 +1071,14 @@ settings:
                 label: Full
                 value: anp-td-full
     -
+        id: anp-table-highlight-opacity
+        title: Highlight opacity
+        default: 0.5
+        type: variable-number-slider
+        min: 0
+        max: 1
+        step: 0.1
+    -
         id: anp-table-align-th
         title: Th text align
         type: variable-select
@@ -1831,6 +1839,11 @@ body {
   animation: fade 0.2s;
 }
 
+.popover .markdown-embed-link {
+  --icon-color: var(--text-normal);
+  --icon-color-hover: var(--text-faint);
+}
+
 /*-Recolor tooltips-*/
 .tooltip {
   color: rgb(var(--text));
@@ -2548,22 +2561,22 @@ hr {
 }
 
 .anp-table-toggle.anp-th-highlight .markdown-rendered th {
-  background-color: rgba(var(--ctp-mantle), 0.5);
+  background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 .anp-table-toggle.anp-td-alt-rows .markdown-rendered table tr:nth-child(2n) td {
-  background-color: rgba(var(--ctp-mantle), 0.5);
+  background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 .anp-table-toggle.anp-td-alt-cols .markdown-rendered table tr td:nth-child(2n) {
-  background-color: rgba(var(--ctp-mantle), 0.5);
+  background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 .anp-table-toggle.anp-td-checkered .markdown-rendered table tr td:nth-child(2n), .anp-table-toggle.anp-td-checkered .markdown-rendered table tr:nth-child(2n) td {
-  background-color: rgba(var(--ctp-mantle), 0.5);
+  background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 .anp-table-toggle.anp-td-checkered .markdown-rendered table tr:nth-child(2n) td:nth-child(2n) {
-  background-color: rgba(var(--ctp-crust), 0.5);
+  background-color: rgba(var(--ctp-crust), var(--anp-table-highlight-opacity, 0.5));
 }
 .anp-table-toggle.anp-td-full .markdown-rendered table td {
-  background-color: rgba(var(--ctp-mantle), 0.5);
+  background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 
 .anp-table-auto.markdown-rendered table {
