--- a/src/modules/Base/index.scss
+++ b/src/modules/Base/index.scss
@@ -3,6 +3,7 @@
 @import "general-ui.scss";
 @import "graph.scss";
 @import "layouts.scss";
+@import "rtl.scss";
 @import "settings-page.scss";
 @import "stacked-tabs.scss";
 @import "translucency.scss";
