--- a/theme.css
+++ b/theme.css
@@ -3592,14 +3592,16 @@ None of the original code was used and the feature was implemented from scratch.
   background-color: var(--background-secondary);
   position: fixed;
   z-index: 1;
-  width: calc(100% - 2 * var(--size-4-3));
+  margin-left: calc(-0.5 * var(--size-4-3));
+  width: calc(100% - 1.22 * var(--size-4-3));
   border: 1px solid var(--background-modifier-border);
   border-radius: var(--radius-s);
 }
 
 .anp-floating-header .nav-folder.mod-root > .nav-folder-title:hover {
   background-color: var(--background-secondary);
-  width: calc(100% - 2 * var(--size-4-3));
+  width: calc(100% - 1.2 * var(--size-4-3));
+  margin-left: calc(-0.5 * var(--size-4-3));
 }
 
 .anp-floating-header .nav-folder.mod-root > .nav-folder-children {
