--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -59,7 +59,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border-bottom: none;
 }
 .anp-card-layout .mod-vertical .workspace-tab-header-container {
-    padding-left: 20px;
+    padding-left: var(--anp-card-header-left-padding, 20px);
 }
 .anp-card-layout .mod-vertical .workspace-tab-header-container-inner {
     margin: 6px -5px calc(var(--tab-outline-width) * -1);
