--- a/src/modules/Core/style-settings.scss
+++ b/src/modules/Core/style-settings.scss
@@ -915,6 +915,10 @@ settings:
         level: 2
         collapsed: true
     - 
+        id: anp-codeblock-numbers
+        title: Enable codeblock numbering
+        type: class-toggle
+    - 
         id: anp-button-metadata-toggle
         title: Enable custom metadata button
         type: class-toggle
@@ -1091,11 +1095,11 @@ settings:
         default: center
         options:
             -
-                label: Center
-                value: center
-            -
                 label: Left
                 value: left
+            -
+                label: Center
+                value: center
             -
                 label: Right
                 value: right
@@ -1106,11 +1110,11 @@ settings:
         default: center
         options:
             -
-                label: Center
-                value: center
-            -
                 label: Left
                 value: left
+            -
+                label: Center
+                value: center
             -
                 label: Right
                 value: right
@@ -1169,6 +1173,64 @@ settings:
         type: heading
         level: 3
         collapsed: true
+    -
+        id: anp-safari-tab-radius
+        title: Tab radius
+        type: variable-number
+        description: Size unit is px
+        default: 6
+        format: px
+    -
+        id: anp-safari-tab-gap
+        title: Tab gap
+        type: variable-number
+        description: Size unit is px
+        default: 10
+        format: px
+    -
+        id: anp-safari-border-width
+        title: Tab border width
+        type: variable-number
+        description: Size unit is px
+        default: 1
+        format: px
+    -
+        id: anp-safari-tab-align
+        title: Tab align
+        type: variable-select
+        default: center
+        options:
+            -
+                label: Left
+                value: left
+            -
+                label: Center
+                value: center
+            -
+                label: Right
+                value: right
+    -
+        id: anp-tags-header
+        title: Tags
+        type: heading
+        level: 2
+        collapsed: true
+    -
+        id: tag-border-width
+        title: Tag border width
+        type: variable-number
+        description: Size unit is px
+        default: 0
+        format: px
+    -
+        id: tag-radius
+        title: Tag radius
+        type: variable-number-slider
+        default: 2
+        max: 2
+        min: 0
+        step: 0.1
+        format: em
     - 
         id: anp-decor-header
         title: Text decorations
