--- a/src/modules/Features/index.scss
+++ b/src/modules/Features/index.scss
@@ -4,3 +4,4 @@
 @import "colorful-frame.scss";
 @import "custom-checkboxes.scss";
 @import "floating-title.scss";
+@import "codeblock-numbers.scss";
