--- a/src/modules/Note/headers.scss
+++ b/src/modules/Note/headers.scss
@@ -120,7 +120,7 @@
    margin-block-start: var(--anp-header-margin-value);
   margin-block-end: var(--anp-header-margin-value);
 }
-.anp-editor-font-toggle .markdown-source-view {
+.anp-editor-font-toggle .markdown-source-view:not(.is-live-preview) {
 	--h1-font: var(--anp-editor-font);
 	--h2-font: var(--anp-editor-font);
 	--h3-font: var(--anp-editor-font);
