--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -25,22 +25,23 @@
 .anp-alternate-tab-toggle .mod-vertical:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header-container-inner,
 .anp-alternate-tab-toggle .mod-horizontal:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header-container-inner {
   align-items: center;
-  justify-content: center;
+  justify-content: var(--anp-safari-tab-align, center);
   margin: 0;
   width: 100%;
+  gap: var(--anp-safari-tab-gap, 10px);
 }
 .anp-alternate-tab-toggle .mod-vertical:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header,
 .anp-alternate-tab-toggle .mod-horizontal:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
   background: var(--tab-background);
-  border-radius: 6px;
+  border-radius: var(--anp-safari-tab-radius, 6px);
   box-shadow: none !important;
   height: var(--tab-height);
-  margin-left: 12px;
   padding: 0 !important;
   transition: 400ms, background-color 150ms ease-in-out;
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
   max-width: var(--tab-max-width) !important;
+  border: var(--anp-safari-border-width, 1px) solid var(--tab-outline-color);
 }
 .anp-alternate-tab-toggle.anp-alt-tab-anim-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
   transition: 400ms;
