--- a/theme.css
+++ b/theme.css
@@ -845,6 +845,13 @@ settings:
         level: 3
         collapsed: true
     - 
+        id: anp-card-radius
+        title: Card radius
+        description: Size unit is px
+        type: variable-number
+        default: 16
+        format: px
+    - 
         id: anp-card-layout-padding
         title: Card padding
         description: Size unit is px
@@ -2007,14 +2014,14 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 }
 
 .anp-card-layout-actions.anp-card-layout .side-dock-actions {
-  border-radius: 0px var(--radius-xl) var(--radius-xl) 0px;
+  border-radius: 0px var(--anp-card-radius, var(--radius-xl)) var(--anp-card-radius, var(--radius-xl)) 0px;
   border: 1px solid var(--tab-outline-color);
   background-color: var(--background-primary);
   margin-top: 2px;
 }
 
 .anp-card-layout-actions.anp-card-layout .side-dock-settings {
-  border-radius: 0px var(--radius-xl) 0px 0px;
+  border-radius: 0px var(--anp-card-radius, var(--radius-xl)) 0px 0px;
   border: 1px solid var(--tab-outline-color);
   background-color: var(--background-primary);
 }
@@ -2066,7 +2073,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 }
 
 .anp-card-layout .workspace-split .workspace-leaf-content {
-  border-radius: var(--radius-xl);
+  border-radius: var(--anp-card-radius, var(--radius-xl));
   background-color: var(--background-primary);
   border: 1px solid var(--tab-outline-color);
   margin-bottom: var(--anp-card-layout-padding, 10px);
@@ -2104,7 +2111,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 
 .anp-card-layout .mod-stacked .workspace-tab-header {
   border-style: solid;
-  border-radius: var(--radius-xl) 0px 0px var(--radius-xl) !important;
+  border-radius: var(--anp-card-radius, var(--radius-xl)) 0px 0px var(--anp-card-radius, var(--radius-xl)) !important;
   border-width: var(--tab-outline-width);
   border-color: var(--tab-outline-color);
   border-right: var(--tab-outline-width) dashed var(--tab-outline-color);
@@ -2116,7 +2123,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
   border-bottom-width: var(--tab-outline-width);
   border-style: solid;
   border-color: var(--tab-outline-color);
-  border-radius: 0 var(--radius-xl) var(--radius-xl) 0;
+  border-radius: 0 var(--anp-card-radius, var(--radius-xl)) var(--anp-card-radius, var(--radius-xl)) 0;
 }
 
 .anp-card-layout .mod-stacked .workspace-tab-container {
