--- a/src/modules/Core/default-variables.scss
+++ b/src/modules/Core/default-variables.scss
@@ -151,6 +151,7 @@
     --callout-title-padding: var(--size-4-2);
     --table-border-width: var(--anp-table-thickness, 1px);
     --icon-color-focused: var(--color-accent);
+    --embed-block-shadow-hover: none; //no shadow
 }
 .theme-dark {
       color-scheme: dark;
