--- a/theme.css
+++ b/theme.css
@@ -1812,6 +1812,7 @@ settings:
   --callout-title-padding: var(--size-4-2);
   --table-border-width: var(--anp-table-thickness, 1px);
   --icon-color-focused: var(--color-accent);
+  --embed-block-shadow-hover: none;
 }
 
 .theme-dark {
@@ -1868,6 +1869,24 @@ body {
 /*-ZWSP Highlight-*/
 .ͼ2 .cm-specialChar {
   color: rgb(var(--ctp-red));
+}
+
+/*-Block edit button-*/
+.markdown-source-view.mod-cm6 .edit-block-button {
+  background-color: var(--background-secondary);
+  cursor: pointer;
+  border: 1px solid var(--background-modifer-border);
+}
+.markdown-source-view.mod-cm6 .edit-block-button:hover {
+  background-color: var(--background-secondary);
+  background-color: var(--background-secondary);
+  opacity: 1;
+}
+
+.markdown-source-view.mod-cm6 .cm-embed-block:hover .edit-block-button:hover {
+  background-color: var(--background-secondary);
+  border: 1px solid var(--background-modifer-border);
+  opacity: 1;
 }
 
 /*----------FILE PREVIEW MARGINS--------------*/
