--- a/src/modules/Base/editor.scss
+++ b/src/modules/Base/editor.scss
@@ -39,3 +39,16 @@
   border: 1px solid var(--background-modifer-border);
   opacity: 1;
 }
+/*-Vim Terminal-*/
+.ͼ2 .cm-panels-bottom {
+  border-top: 1px solid rgb(var(--ctp-surface1));
+  input {
+    &:hover, &:focus, &:focus-visible {
+      border: none;
+      box-shadow: none;
+    }
+    background-color: transparent;
+    font-family: var(--font-monospace);
+    width: 100%;
+  }
+}
