--- a/theme.css
+++ b/theme.css
@@ -274,11 +274,10 @@ settings:
         format: px
     - 
         id: anp-tab-stacked-pane-width
-        title: Stacked tabs pane width
-        description: In percentage
+        title: Stacked tabs pane width multiplier
+        description: Multiplies the stack tab pane with which depends on file line width
         type: variable-number
-        default: 100
-        format: "%"
+        default: 1
     - 
         id: anp-ui-header
         title: General UI
@@ -1841,7 +1840,7 @@ body {
   --anp-preview-width-max: 800px;
   --anp-header-margin-value: 10px;
   --anp-header-font: "Noto Serif";
-  --tab-stacked-pane-width: var(--file-line-width);
+  --tab-stacked-pane-width: calc(var(--anp-tab-stacked-pane-width)*var(--file-line-width));
   --anp-table-width-pct: 100%;
 }
 
