--- a/theme.css
+++ b/theme.css
@@ -2704,13 +2704,13 @@ hr {
 }
 
 /*-Recolor table borders-*/
-.anp-table-toggle .markdown-rendered table, .anp-table-toggle .markdown-rendered td, .anp-table-toggle .markdown-rendered th, .anp-table-toggle .markdown-rendered thead tr > th:first-child, .anp-table-toggle .markdown-rendered thead tr > th, .anp-table-toggle .markdown-rendered thead tr > th:last-child {
+.anp-table-toggle .markdown-rendered:not(.cards) table, .anp-table-toggle .markdown-rendered:not(.cards) td, .anp-table-toggle .markdown-rendered:not(.cards) th, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th:first-child, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th:last-child {
   border: var(--anp-table-thickness, 1px) solid var(--table-border-color);
 }
-.anp-table-toggle .markdown-rendered th, .anp-table-toggle .markdown-rendered thead tr > th:first-child, .anp-table-toggle .markdown-rendered thead tr > th, .anp-table-toggle .markdown-rendered thead tr > th:last-child {
+.anp-table-toggle .markdown-rendered:not(.cards) th, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th:first-child, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th, .anp-table-toggle .markdown-rendered:not(.cards) thead tr > th:last-child {
   text-align: var(--anp-table-align-th, center);
 }
-.anp-table-toggle .markdown-rendered td {
+.anp-table-toggle .markdown-rendered:not(.cards) td {
   text-align: var(--anp-table-align-td, center);
 }
 
@@ -2718,41 +2718,62 @@ hr {
   background-color: rgba(var(--ctp-surface1), 0.1) !important;
 }
 
-.anp-table-toggle.anp-th-highlight .markdown-rendered th {
+.anp-table-toggle.anp-th-highlight .markdown-rendered:not(.cards) th {
   background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
-.anp-table-toggle.anp-td-alt-rows .markdown-rendered table tr:nth-child(2n) td {
+.anp-table-toggle.anp-td-alt-rows .markdown-rendered:not(.cards) table tr:nth-child(2n) td {
   background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
-.anp-table-toggle.anp-td-alt-cols .markdown-rendered table tr td:nth-child(2n) {
+.anp-table-toggle.anp-td-alt-cols .markdown-rendered:not(.cards) table tr td:nth-child(2n) {
   background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
-.anp-table-toggle.anp-td-checkered .markdown-rendered table tr td:nth-child(2n), .anp-table-toggle.anp-td-checkered .markdown-rendered table tr:nth-child(2n) td {
+.anp-table-toggle.anp-td-checkered .markdown-rendered:not(.cards) table tr td:nth-child(2n), .anp-table-toggle.anp-td-checkered .markdown-rendered:not(.cards) table tr:nth-child(2n) td {
   background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
-.anp-table-toggle.anp-td-checkered .markdown-rendered table tr:nth-child(2n) td:nth-child(2n) {
+.anp-table-toggle.anp-td-checkered .markdown-rendered:not(.cards) table tr:nth-child(2n) td:nth-child(2n) {
   background-color: rgba(var(--ctp-crust), var(--anp-table-highlight-opacity, 0.5));
 }
-.anp-table-toggle.anp-td-full .markdown-rendered table td {
+.anp-table-toggle.anp-td-full .markdown-rendered:not(.cards) table td {
   background-color: rgba(var(--ctp-mantle), var(--anp-table-highlight-opacity, 0.5));
 }
 
-.anp-table-auto.markdown-rendered table {
+.anp-table-auto.markdown-rendered:not(.cards) table {
   margin: 0 auto;
 }
 
-.anp-table-width.markdown-rendered table {
+.anp-table-width.markdown-rendered:not(.cards) table {
   width: var(--anp-table-width-pct);
 }
 
-.anp-table-auto.anp-table-toggle .markdown-rendered table {
+.anp-table-auto.anp-table-toggle .markdown-rendered:not(.cards) table {
   margin: 0 auto;
 }
 
-.anp-table-width.anp-table-toggle .markdown-rendered table {
+.anp-table-width.anp-table-toggle .markdown-rendered:not(.cards) table {
   width: var(--anp-table-width-pct);
   margin-left: calc(50% - var(--anp-table-width-pct) / 2);
   margin-right: calc(50% - var(--anp-table-width-pct) / 2);
+}
+
+/*-------Tweak for Minimal Cards--------------
+Minimal cards are a snippet designed by Kepano for the Minimal theme.
+None of the original code was used in this theme, and the following code is merely some tweaks to the snippet.
+--------------------------------------------*/
+.cards .table-view-table > tbody > tr > td {
+  border-bottom: 1px dashed rgba(var(--ctp-subtext0), 0.2) !important;
+}
+.cards .table-view-table > tbody > tr > td:last-child {
+  border-bottom-color: transparent !important;
+}
+.cards .table-view-table > tbody > tr > td:first-child {
+  width: 100% !important;
+  border-bottom: 1px dashed rgba(var(--ctp-subtext0), 0.2) !important;
+}
+.cards .table-view-table > tbody > tr > td:first-child span {
+  margin: 2px calc(var(--cards-padding) * 0.5) 0 calc(var(--cards-padding) * 0.5);
+}
+.cards .table-view-table > tbody > tr > td:first-child span a {
+  padding: 0 !important;
 }
 
 .anp-alternate-tab-toggle, .anp-default-tab {
